--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,7 +99,7 @@
         button.classList.add("disabled");
       }
     } catch (error) {
-      // Se algo der errado (ex: a resposta não for um JSON válido), mostrará um erro no console.
+      // Mostra o erro no console.
       console.error("Falha ao processar a API:", error);
     }
   }
